# lbs-ndi

./: CMakeLists.txt
data/locale/: en-US.ini
lib/ndi/: Processing.NDI.Lib.h
src/: obs-ndi-filter.cpp  obs-ndi-source.cpp  obs-ndi.cpp  obs-ndi.h
